...
        </LinearLayout>

    </HorizontalScrollView>

    <!-- RecyclerView for Posts -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPosts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/stories_section"
        android:layout_above="@id/bottom_bar"
        android:padding="8dp" />

...
